trunk/Archive2/dc/6a72d92bd5bbb6/output
main.cpp:20:14: error: expected ';' after top level declarator
std::string s{}; // calls default ctor, the value is "" (empty string)
             ^
             ;
main.cpp:23:10: error: expected ';' at end of declaration
    int n{};     // non-class value-initialization, value is 0
         ^
         ;
main.cpp:27:10: error: expected ';' at end of declaration
    T1 t1{}; // no ctors: zero-initialized
         ^
         ;
main.cpp:31:10: error: expected ';' at end of declaration
    T3 t3{}; // user-defined default ctor:
         ^
         ;
main.cpp:40:2: warning: no newline at end of file [-Wnewline-eof]
}
 ^
1 warning and 4 errors generated.
